--- a/src/CSS/Certificates.css
+++ b/src/CSS/Certificates.css
@@ -9,7 +9,12 @@
 .certs-section {
   padding: 40px 0;
 }
-
+.container {
+    
+    margin: 0px auto !important;
+    padding: 0px 0px !important;
+    
+}
 .certs-card {
   background: var(--bg-card);
   border-radius: 12px;
@@ -107,4 +112,9 @@
   max-height: 85%;
   border-radius: 10px;
   box-shadow: 0 0 25px rgba(255,255,255,0.2);
+}
+@media (max-width:768px){
+  main{
+    padding-top:0px !important;
+  }
 }
