--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+main {
+  padding-top: 0px;
+}
+@media (max-width:768px){
+  main{
+    padding-top:80px;
+  }
+}
+
 :root{
   --bg:#050509;
   --card:#0f1114;
